# IGT---Project

./: .gitignore  .gitmodules  CMakeLists.txt  IGT - Project.sln  README.md
Debug/: IGT - Project.ilk  Settings.ini  imgui.ini
Debug/Maps/: TestMap.tmx  (+1 more)
IGT - Project/: AIController.cpp  AIController.h  Animator.cpp  Animator.h  AnimatorCharacter.cpp  AnimatorCharacter.h  AnimatorGoblin.cpp  AnimatorGoblin.h  AnimatorSnake.cpp  AnimatorSnake.h  Astar.cpp  Astar.h  Attack.cpp  Attack.h  BasicShader.frag  BasicShader.vert  BinaryTree.h  BrainTree.h  Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraFollow.cpp  CameraFollow.h  CameraManager.h  CheckBox.cpp  CheckBox.h  ClassDiagram.cd  Collider.cpp  Collider.h  Collision.cpp  Collision.h  Commons.h  Constant_old.h  Constants.h  Cursor.cpp  Cursor.h  (+119 more)
IGT - Project/Debug/: IGT - Project.res  sprite.obj.enc  tilemap.obj.enc  vc141.idb
IGT - Project/Debug/IGT - Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  IGT - Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
IGT - Project/ImGui/: imgui_demo.cpp  imgui_impl_opengl3.cpp
IGT - Project/Levels/: Level1.xml
IGT - Project/Maps/: Banner.tsx  Decorations.tsx  TestMap.tmx  TestMap.xml  TestMap2.xml  TestMapCollision.xml  TestMapWithCollision.txt  TestMapWithCollision.xml  TestMapcollision2.xml  TopDownDungeon.tsx  collisiontest.xml
IGT - Project/Prefabs/: Barrel
IGT - Project/SDL/: ._LICENSE.png.txt
IGT - Project/Shaders/: BasicShader.frag  BasicShader.vert  BlurShader.frag  GUIShader.vert  NoPostProcess.frag  PassThroughShader.vert
(+4 files in other folders)
